# StellarSpiral

./: Density.f90  Ecg.f90  FindOne.f90  FindOne.sh  Follow.f90  Force.f90  GasDensity.f90  Kendall.f90  Makefile  README.md  SearchAll.f90  SearchAllMpi.px.sh  SearchAllMpi.sh  Shift.f90  doxygen.conf  index.html  io.f90  k31d.f90  k3sqrt.f90  math.f90  para.list  params.json  spiral_structure.f90  tags  test.f90
analysis/ComponentParams/: Makefile  k3sqrt.f90  rc.f90
analysis/DiscreteSpiralModes/EigenValue_Fortran/: tags  (+11 more)
analysis/RC/: Makefile  k3sqrt.f90  rc.f90
analysis/gas_disk/: Makefile  fit.gnu  main.f90  main.f90_sq
antares_dev/: Makefile  torque.sh
antares_dev/hydro/: find_dt.f  write_gravity3d.f90
antares_dev/patch/: bndflux2d.f90  force2d.f90  galaxy.f90  init2d.f90  k3sqrt.f90  main.f90  para.nml  show.m  simcontroll.f90
antares_dev/src/: exceptions.f90  fluxRieIso3d.f90  force2d.f90  init3d.f90  k3sqrt.f90  main.f90  read2d.f90
antares_v0.58/hydro/: force2dCTU.f90  output1d.f90  para.nml  riemann2dCTU.f90  sgkernel2d.f90
branch/para0531Spiral1024Snsd8FlatSlow/: torquepx.sh
branch/para0531Spiral1024Snsd8Gaussian10-7f1SlowSG/: Makefile  para.list  torquepx.sh
branch/para0531Spiral1024Snsd8GaussianSlow/: torque.sh  torquepx.sh
branch/para0703Spiral1024Snsd8Gaussian20-6f1SlowSG/: para.list  torque.sh
branch/para0703Spiral1024Snsd8Gaussian20-6f1SlowSG_FullEquation/: Makefile  para.list
data/: RC_Lowe  ReAmpKendall2.csv  ReAmpKendall3.6.csv
dev/: Makefile
dev/2dplot/: Makefile  image.f90  main.f
dev/galaxy_intriisc_parameters/: Makefile  torque.sh
dev/galaxy_module/: torque.sh
dev/hydro/: main.f90
dev/mpi_io_using_lustre/: torque.sh
dev/patch/: force2d.f90  init2d.f90
ext_lib/minpack/: minpack.f90
ext_lib/slatec/: slatec_src.tgz
force/: force.m
n4622/: CMakeLists.txt  density.m  lam.host  makefile.old  parameters  settings  spiral.f  spiral.m  tags  variables  vprojectinfbeamN4622.m
n4622/analysis/: draw_orbit.gnu  spiral_legacy.m
n4622/cmake_modules/: FindPGPLOT.cmake
n4622/libs/: CMakeLists.txt  companion_forcing_fourier_decompose.f  density.f  dqawoe_laplace.f  gsl_wrapper.cpp  kepler.f  libs.mk  makefile.old  mathfunction.f  pgplot_2dmesh.f  rotation_data.f  smooth.f  tags
n4622/src/: CMakeLists.txt  exceptions.f  find_dt.f
n4622/test_lib/: CMakeLists.txt  bar_force.f  companion_force.f  companion_potential_fourier.f  makefile.old  plot_rotation.f  smooth_func.f  tlaplace_coefficient.f
n4622/test_lib/analysis/: orbit_parameter
nouse/: 2Density.f90  RelativeForce.f90  force.f90
para/: para.list.0815  para.list.0816  para.list.para0308  para.list.para0402
tags/antares_struct_dtprint_k3sqrt_force/: Makefile  torque.sh
trunk/: Makefile  tags  torque.sh
trunk/hydro/: common_params.f90  force2d.f90  output2d.f90  output3d.f90  riemann2d.f90  sloplimiter.f90
trunk/lib/: galaxy.f90  k3sqrt.f90
trunk/patch/: check_sg.m  galaxy.f90  loaddata.m  show.m
trunk/script/: force.m  last.m  show.m
trunk/src/: bndflux2d.f90  force2d.f90  init2d.f90  main.f90  main.f90.v0.53  main.f90.v0.55  para.nml  riemann3d.f90  simcontroll.f90  write_collective2d.f90
(+200 files in other folders)
