cmake_minimum_required(VERSION 2.6)
PROJECT (SPIRAL C CXX Fortran)
ADD_SUBDIRECTORY(libs)
ADD_SUBDIRECTORY(test_lib)
ADD_SUBDIRECTORY(src)

set(CMAKE_MODULE_PATH "${SPIRAL_SOURCE_DIR}/cmake_modules/")


set(Library_MODDIR "${SPIRAL_BINARY_DIR}")
SET(LIBRARY_OUTPUT_PATH ${SPIRAL_BINARY_DIR}/libs )
SET(EXECUTABLE_OUTPUT_PATH "${SPIRAL_SOURCE_DIR}")

ADD_LIBRARY(slatec STATIC IMPORTED)
SET_PROPERTY(TARGET slatec PROPERTY IMPORTED_LOCATION "${SPIRAL_SOURCE_DIR}/libs/libslatec.a" )

ADD_LIBRARY(matlabio SHARED IMPORTED)
SET_PROPERTY(TARGET matlabio PROPERTY IMPORTED_LOCATION "/penguin/apps/matlabR14/bin/glnxa64/libmat.so")


ADD_EXECUTABLE(spiral spiral.f)
LINK_DIRECTORIES(${SPIRAL_BINARY_DIR}/libs)
INCLUDE_DIRECTORIES(${SPIRAL_BINARY_DIR}/libs)
TARGET_LINK_LIBRARIES(spiral SPIRAL_LIB SRC_LIB slatec gsl matlabio )
SET_PROPERTY(TARGET spiral PROPERTY Fortran_MODULE_DIRECTORY "${SPIRAL_BINARY_DIR}/libs")
SET_PROPERTY(TARGET spiral PROPERTY Fortran_MODULE_DIRECTORY "${SPIRAL_BINARY_DIR}/src")
SET_PROPERTY(TARGET spiral PROPERTY LINKER_LANGUAGE Fortran)
