#FILE(GLOB SLATEC_FILES slatec/*.f)
#ADD_LIBRARY(SLATEC STATIC IMPORTED)
#SET_PROPERTY(TARGET SLATEC PROPERTY LOCATION ${SPIRAL_SOURCE_DIR}/libs/libslatec.a )


set(CMAKE_MODULE_PATH "${SPIRAL_SOURCE_DIR}/cmake_modules/")

FIND_PACKAGE(GSL REQUIRED)
INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS})
LINK_LIBRARIES(${GSL_LIBRARIES})

FILE(GLOB LIB_FILES *.*)
ADD_LIBRARY(SPIRAL_LIB  ${LIB_FILES})
TARGET_LINK_LIBRARIES(SPIRAL_LIB gsl)
